Cast list added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cmake.sourceDirectory": "C:/Users/ALAT/Desktop/App Development/netflix/windows/runner",
     "cSpell.words": [
         "Appbarwidget",
+        "Castmodel",
         "comming",
         "Commingsoonrepoimpl",
         "Downloadimagewidget",
