--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_animated_splash: ^0.0.10
+  image: ^4.2.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -50,6 +53,8 @@ dependencies:
   bloc: ^8.1.4
   flutter_bloc: ^8.1.6
   intl: ^0.19.0
+  flutter_native_splash: ^2.4.1
+  animated_splash_screen: ^1.3.0
 
 
 
@@ -78,9 +83,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+
+
+  assets:
+    - assets/images/netflix_logo.gif
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
